Fixed Upgrade Account page alignment issue.

--- a/TabRepository/wwwroot/css/site.css
+++ b/TabRepository/wwwroot/css/site.css
@@ -1331,5 +1331,5 @@ td {
 }
 
 #credit-card-table {
-    width: 400px;
+    max-width: 400px;
 }
